fix inconsistent letter spacing on trivia page

--- a/styles/style.css
+++ b/styles/style.css
@@ -189,5 +189,4 @@ footer p {
   color: rgb(202, 202, 202);
   font-size: 15px;
   font-weight: lighter;
-  letter-spacing: 1px;
 }
